--- a/sinatra/Gemfile
+++ b/sinatra/Gemfile
@@ -2,6 +2,8 @@ source "https://rubygems.org"
 
 # A DSL for quickly creating web applications
 # https://github.com/sinatra/sinatra
+ruby '3.1.2'
+
 gem "sinatra", "~> 2.1"
 gem 'bcrypt', '~> 3.1', '>= 3.1.18'
 
