--- a/sinatra/config/database.yml
+++ b/sinatra/config/database.yml
@@ -6,19 +6,19 @@
 #
 
 development:
-  adapter: "sqlite3"
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
-  database: db/development.sqlite3
+  database: db/development.db
 
 test:
-  adapter: "sqlite3"
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
   database: db/test.sqlite3
 
 production:
-  adapter: "sqlite3"
+  adapter: sqlite3
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
   database: db/production.sqlite3
