--- a/sinatra/config/database.yml
+++ b/sinatra/config/database.yml
@@ -11,14 +11,14 @@ development:
   timeout: 5000
   database: db/development.db
 
-test:
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-  database: db/test.sqlite3
+# test:
+#   adapter: sqlite3
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#   timeout: 5000
+#   database: db/test.sqlite3
 
-production:
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-  database: db/production.sqlite3
+# production:
+#   adapter: sqlite3
+#   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+#   timeout: 5000
+#   database: db/production.sqlite3
